watsongov-argocd/resources/templates/network/nginx-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
  namespace: openshift-gitops-operator
spec:
  to:
    kind: Service
    name: nginx-service
  port:
    targetPort: 80
  tls:
    termination: edge  # Optional: Use edge termination for HTTPS
  host: nginx-app.example.com  # Replace with your desired domain
